--- a/style.css
+++ b/style.css
@@ -27,8 +27,9 @@ body {
     overflow-x: hidden;
     display: flex;
     justify-content: center;
-    align-items: center;
+    
     min-height: 100vh;
+    
 }
 
 body::before {
@@ -45,23 +46,25 @@ body::before {
 .wrapper {
     width: 100%;
     height: 100%;
+    background-color: #000;
     background: url('imgs/invertida.jpg') no-repeat center center;
     background-size: cover;
     position: relative;
     display: flex;
     justify-content: center;
-    align-items: center;
+
 }
 
 header {
-    position: fixed;
+    
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
     padding: 20px 100px;
     display: flex;
     justify-content: space-between; 
-    align-items: center;
+    
     z-index: 1;
 }
 
@@ -83,6 +86,12 @@ header {
 
 }
 
+.nav .toggle_btn{
+    cursor: pointer;
+    display: none;
+
+}
+
 .nav ul li a:hover,
 .nav ul li a:focus{
     border-bottom: 2px solid white;
@@ -100,8 +109,11 @@ header {
 }
 
 .content{
-    width: 100%;
-    padding-top: 140px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
 }
 .content .main-text{
     position: absolute;
