--- a/style.css
+++ b/style.css
@@ -54,13 +54,22 @@ body::before {
     width: 100%;
     height: 100%;
     background-color: #000;
-    background: url('imgs/invertida.jpg') no-repeat center center;
+   
     background-size: cover;
     position: relative;
     display: flex;
     justify-content: center;
     padding: 20px;
 
+}
+
+
+.carousel .list .item img {
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover;
+    position: absolute; 
+   inset: 0 0 0;
 }
 .carousel .list{
     width: 100%;
