--- a/style.css
+++ b/style.css
@@ -341,6 +341,88 @@ nav {
 .carousel .list .item:nth-child(1){
     z-index: 1;
 }
+.carousel .list .item:nth-child(1) .title,
+.carousel .list .item:nth-child(1) .paragrafo,
+.carousel .list .item:nth-child(1) .watch-now{
+    opacity: 1;
+    transform: translateY(50px);
+   
+    animation: showContent 0.5 1s linear forwards;
+}
+
+
+
+
+@keyframes showContent{
+    to{
+        filter: blur(0);
+        opacity: 2;
+        transform: translateY(0);
+    }
+  
+}
+
+
+
+.carousel.next .list .item:nth-child(1) img{
+    width: 140px;
+    height: 220px;
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    border-radius: 30px;
+    animation: showImage .5s linear 1 forwards;
+}
+@keyframes showImage{
+    to{
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+    }
+}
+
+
+.carousel.next .thumbnail .item:nth-last-child(1){
+    overflow: hidden;
+    animation: showThumbnail .5s linear 1 forwards;
+}
+.carousel.prev .list .item img{
+    z-index: 100;
+}
+@keyframes showThumbnail{
+    from{
+        width: 0;
+        opacity: 0;
+    }
+}
+
+
+    .carousel.next .thumbnail{
+        transform: translateX(150px);
+        animation: transformThumbnail .5s linear 1 forwards;
+    }
+
+    @keyframes  transformThumbnail{
+        to{
+            transform: translateX(0);
+        }
+    }
+
+    .carousel.next .thumbnail{
+        animation: effectNext .5s linear 1 forwards;
+    }
+    
+    @keyframes effectNext{
+        from{
+            transform: translateX(140px);
+        }
+    }
+
+
+
+
 
 
 @media (max-width: 911px) {
