--- a/style.css
+++ b/style.css
@@ -421,9 +421,29 @@ nav {
     }
 
 
+    .carousel.prev .list .item:nth-child(2){
+        z-index: 2;
+    }
+    
+    .carousel.prev .list .item:nth-child(2) img{
+        animation: outFrame 0.5s linear 1 forwards;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+       
+    }
+    @keyframes outFrame{
+        to{
+            width: 140px;
+            height: 220px;
+            bottom: 50px;
+            left: 50%;
+            border-radius: 20px;
+            opacity: 0;
+        }
+    }
 
-
-
+    
 
 @media (max-width: 911px) {
     .nav ul {
@@ -480,3 +500,11 @@ nav {
 
 }
 
+@media screen and (max-width: 678px) {
+    .carousel .list .item .content{
+        padding-right: 0;
+    }
+    .carousel .list .item .content .title{
+        font-size: 30px;
+    }
+}
