--- a/style.css
+++ b/style.css
@@ -356,6 +356,39 @@ nav {
     animation: showContent 0.4 1s linear forwards;
 }
 
+.pop-Up-Container{
+    background-color:  rgba(0, 0, 0, .75);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    max-width: 80vw;
+    width: 400px;
+    transform: translate(-50%, -50% scale(0));
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    z-index: 1;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow:  0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.4s ease, opacity 0.3s ease ;
+    pointer-events: none;
+    transition-delay: .12s;
+
+    }
+
+    .mat-dialog-container{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        position: relative;
+
+    }
+    
 
 
 
