--- a/style.css
+++ b/style.css
@@ -408,7 +408,34 @@ nav {
         width: 43px; 
         height: auto; 
     }
-    
+    .card-warapper{
+        position: relative;
+        width: 400px;
+        height: 500px;
+        display: flex;
+        align-items: center;
+        border-radius: 10px;
+        border: 1px solid #000;
+
+
+    }
+    .card-login .form-box{
+        width: 100%;
+        padding: 40PX;
+    }
+    .form-box h2 {
+        font-size: 2em;
+        color: #ffffff; 
+        text-align: center;
+    }
+    .input-box{
+     position: relative;
+     width: 100%;
+     height: 50px;
+     border-bottom: 2px solid #eff2f5;
+     margin: 30px 0;
+    }
+
     
 
 
