--- a/style.css
+++ b/style.css
@@ -436,7 +436,29 @@ nav {
      margin: 30px 0;
     }
 
+    .input-box label{
+        position: absolute;
+        top: 50%;
+        left: 5px;
+        transform: translateY(-50%);
+        font-size: 1em;
+        color: rgb(255, 0, 0);
+        pointer-events: none;
+        transition: .5s;
+        
+    }
+    .input-box input{
+        width: 100%;
+        height: 100%;
+        background: transparent;
+        border: none;
+        outline: none;
+        font-size: 1em;
+        font-weight: 300;
+        color: var(--bg-color);
+        padding: 0 35px 0 1px;
     
+    }
 
 
 
