--- a/style.css
+++ b/style.css
@@ -356,25 +356,26 @@ nav {
     animation: showContent 0.4 1s linear forwards;
 }
 
-.pop-Up-Container{
-    background-color:  rgba(0, 0, 0, .75);
+.pop-up-container{
+    background-color: rgba(0, 0, 0, .75);
     position: absolute;
     top: 50%;
     left: 50%;
+
+  
     max-width: 80vw;
     width: 400px;
-    transform: translate(-50%, -50% scale(0));
     height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #fff;
-    z-index: 1;
     border-radius: 8px;
     padding: 20px;
-    box-shadow:  0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: transform 0.4s ease, opacity 0.3s ease ;
     pointer-events: none;
+    z-index: 1000;
     transition-delay: .12s;
 
     }
@@ -455,12 +456,42 @@ nav {
         outline: none;
         font-size: 1em;
         font-weight: 300;
-        color: var(--bg-color);
+        color: #b61d1d;
         padding: 0 35px 0 1px;
     
     }
+    .input-box .icon{
+        position: absolute;
+        right: 8px;
+        font-size: 1.2em;
+        color: aqua;
+        line-height: 57px;
 
+    }
 
+    .input-box input:focus + label,
+    .input-box input:valid + label{
+        top: -5px;
+        color: bisque;
+        font-size: 0.85em;
+    }
+
+    .btn{
+        border: none;
+        background: #b61d1d;
+        color: aquamarine;
+        padding: 5px;
+        font-size: 18px;
+        border-radius: 5px;
+        font-weight: bold;
+        cursor: pointer;
+        width: 280px;
+        transition: transform 0.3s ease;
+    }
+
+    .btn:hover{
+        transform: scale(1.05);
+    }
 
 
 @keyframes showContent{
