--- a/style.css
+++ b/style.css
@@ -361,8 +361,8 @@ nav {
     position: absolute;
     top: 50%;
     left: 50%;
-
-  
+    transform: translate(-50%, -50%) scale(0); /* Escondido inicialmente */
+    opacity: 0;
     max-width: 80vw;
     width: 400px;
     height: 500px;
@@ -380,6 +380,13 @@ nav {
 
     }
 
+    .pop-up-container.active{
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 1;
+        pointer-events: auto;
+    }
+
+
     .mat-dialog-container{
         width: 100%;
         height: 100%;
@@ -396,7 +403,7 @@ nav {
     }
     .icon-top-left {
         position: absolute;
-        top: -44px;
+        top: 60px;
         left: -20px;
         width: 43px;
         height: auto;
@@ -410,25 +417,27 @@ nav {
         height: auto; 
     }
     .card-warapper{
+      bottom: 40px;
         position: relative;
         width: 400px;
         height: 500px;
         display: flex;
         align-items: center;
         border-radius: 10px;
-        border: 1px solid #000;
+       
 
 
     }
     .card-login .form-box{
         width: 100%;
-        padding: 40PX;
+        padding: 40px;
     }
     .form-box h2 {
         font-size: 2em;
         color: #ffffff; 
         text-align: center;
     }
+
     .input-box{
      position: relative;
      width: 100%;
@@ -492,7 +501,21 @@ nav {
     .btn:hover{
         transform: scale(1.05);
     }
-
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        display: none;
+        z-index: 999;
+    }
+    
+    .overlay.active {
+        display: block;
+    }
+    
 
 @keyframes showContent{
     to{
